--- a/templates/index.html
+++ b/templates/index.html
@@ -19,21 +19,36 @@
 </head>
 
 <body>
+    <div id="loader">
+        <div class="loader-body">
+            <div class="circle-container">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <img src="../static/assets/img/Groupmic.svg" alt="dsc" class="micro">
+    
+            </div>  
+        </div>
+    </div>
     <div class="nav-super">
         <nav class="navbar">
-            <span>
-                <a href="#home">
-                    <img src="../static/assets/img/DSCWhitedsc.svg" alt="dsc" class="nav-logo">
-                </a>
-            </span>
-            <img src="../static/assets/icons/Vectorbars.svg" alt="menu" class="mobile-bars">
+            <div class="mob-bars">
+                <span>
+                    <a href="#home">
+                        <img src="../static/assets/img/DSCWhitedsc.svg" alt="dsc" class="nav-logo">
+                    </a>
+                </span>
+                <img src="../static/assets/icons/Vectorbars.svg" alt="menu" class="mobile-bars">    
+            </div>
 
             <ul class="nav-list">
-                <li class="nav-link">
-                    <a href="#aboutus" class="active">About Us</a>
+                <li class="nav-link ">
+                    <a href="#aboutus" class="click aboutus">About Us</a>
                 </li>
                 <li class="nav-link">
-                    <a href="#episodes">Episodes</a>
+                    <a href="#episodess" class="click episodess">Episodes</a>
                 </li>
                 <li class="nav-link">
                     <a href="https://anchor.fm/dsc-vit/episodes/Introducing-DSC-Afterhours-elalj4">Subscribe</a>
@@ -43,8 +58,8 @@
     </div>
     <section id="home">
         <div class="container">
-            <img src="../static/assets/img/illustrationmic.svg" alt="mic" class="mic">
-            <div id="home-text">
+                <div id='animated-icon'></div>
+                <div id="home-text">
                 <img src="../static/assets/img/Vectorlogo_large.svg" alt="afterhours" class="desk-icon">
                 <img src="../static/assets/img/Vectorlogo_small.svg" alt="afterhours" class="mobile-icon">
                 <p class="home-desc">
@@ -52,19 +67,24 @@
                     journey in tech, learn new things, have fun and impart knowledge in the process.
                 </p>
                 <div class="home-icons">
-                    <img src="../static/assets/icons/Vectoricon1.svg" alt="social" class="home-icon">
-                    <img src="../static/assets/icons/Vectoricon2.svg" alt="social" class="home-icon">
-                    <img src="../static/assets/icons/Vectoricon3.svg" alt="social" class="home-icon">
-                    <img src="../static/assets/icons/Vectoricon4.svg" alt="social" class="home-icon">
-                    <img src="../static/assets/icons/Vectoricon5.svg" alt="social" class="home-icon">
-                    <img src="../static/assets/icons/Vectoricon6.svg" alt="social" class="home-icon">
-                </div>
+                    <a href="https://open.spotify.com/show/3N03C8MuIQPSqqGZp8XF56">
+                        <img src="../static/assets/icons/Vectoricon2.svg" alt="social" class="home-icon"></a>
+                    <a href="https://podcasts.apple.com/us/podcast/id1536768786">
+                        <img src="../static/assets/icons/Vectoricon1.svg" alt="social" class="home-icon"></a>
+                    <a href="https://pca.st/m1y1rnmy">
+                        <img src="../static/assets/icons/Vectoricon3.svg" alt="social" class="home-icon"></a>
+                    <a href="https://podcasts.google.com/feed/aHR0cHM6Ly9hbmNob3IuZm0vcy8zYzU1YTVmMC9wb2RjYXN0L3Jzcw==">
+                        <img src="../static/assets/icons/Vectoricon4.svg" alt="social" class="home-icon"></a>
+                    <a href="https://overcast.fm/itunes1536768786/dsc-afterhours">
+                        <img src="../static/assets/icons/Vectoricon6.svg" alt="social" class="home-icon"></a>
+                    <a href="https://radiopublic.com/dsc-afterhours-WoL3jR">
+                        <img src="../static/assets/icons/Vectoricon5.svg" alt="social" class="home-icon"></a>                </div>
 
             </div>
 
         </div>
     </section>
-    <section id="aboutus">
+    <section id="aboutus" class="section">
         <div class="about">
             <img src="../static/assets/img/group_dsc.png" alt="group" class="group">
             <div class="about-text">
@@ -86,7 +106,7 @@
         </div>
     </section>
 
-    <section id="episodes">
+    <section id="episodess" class="section">
         <div class="episodes">
             <h1>Episodes</h1>
             {% for i in range(len-1,-1,-1) %}
@@ -102,6 +122,20 @@
                             {{ descs[i] }}
 
                         </p>
+                        <div class="block">
+                            <div class="album">
+                                <div class="artwork">
+                                   
+                                    <ul class="bars">
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                         <iframe src={{links[i]}} height="100%" width="100%" frameborder="0" scrolling="no"></iframe>
                     </div>
             {% endfor %}
@@ -182,12 +216,15 @@
             </span>
         </div>
     </section>
+   
 
 
     <!--Scripts-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="../static/assets/js/index.js"></script>
+    <script src="../static/assets/js/animation.js"></script>
+    
 </body>
 
 </html>
