--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <!--Font Awesome Kit-->
     <script src="https://kit.fontawesome.com/3808de5cb1.js" crossorigin="anonymous"></script>
     <!--Font-->
@@ -27,9 +32,9 @@
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
-                <img src="../static/assets/img/Groupmic.svg" alt="dsc" class="micro">
-    
-            </div>  
+                <img src="./assets/img/Groupmic.svg" alt="dsc" class="micro">
+
+            </div>
         </div>
     </div>
     <div class="nav-super">
@@ -40,7 +45,7 @@
                         <img src="../static/assets/img/DSCWhitedsc.svg" alt="dsc" class="nav-logo">
                     </a>
                 </span>
-                <img src="../static/assets/icons/Vectorbars.svg" alt="menu" class="mobile-bars">    
+                <img src="./assets/icons/Vectorbars.svg" alt="menu" class="mobile-bars">
             </div>
 
             <ul class="nav-list">
@@ -58,10 +63,10 @@
     </div>
     <section id="home">
         <div class="container">
-                <div id='animated-icon'></div>
-                <div id="home-text">
-                <img src="../static/assets/img/Vectorlogo_large.svg" alt="afterhours" class="desk-icon">
-                <img src="../static/assets/img/Vectorlogo_small.svg" alt="afterhours" class="mobile-icon">
+            <div id='animated-icon'></div>
+            <div id="home-text">
+                <img src="./assets/img/Vectorlogo_large.svg" alt="afterhours" class="desk-icon">
+                <img src="./assets/img/Vectorlogo_small.svg" alt="afterhours" class="mobile-icon">
                 <p class="home-desc">
                     DSC Afterhours is a series of podcast discussions by the members of DSC VIT to talk about their
                     journey in tech, learn new things, have fun and impart knowledge in the process.
@@ -78,7 +83,7 @@
                     <a href="https://overcast.fm/itunes1536768786/dsc-afterhours">
                         <img src="../static/assets/icons/Vectoricon6.svg" alt="social" class="home-icon"></a>
                     <a href="https://radiopublic.com/dsc-afterhours-WoL3jR">
-                        <img src="../static/assets/icons/Vectoricon5.svg" alt="social" class="home-icon"></a>                </div>
+                        <img src="./assets/icons/Vectoricon5.svg" alt="social" class="home-icon"></a> </div>
 
             </div>
 
@@ -109,36 +114,9 @@
     <section id="episodess" class="section">
         <div class="episodes">
             <h1>Episodes</h1>
-            {% for i in range(len-1,-1,-1) %}
-                    <div class="card">
-                        <p>{{dates[i]}}</p>
-                        <div class="extend">
-                            <h2>
-                                {{ titles[i] }}
-                            </h2>
-                            <i class="fas fa-chevron-down fa-2x chevron"></i>
-                        </div>
-                        <p class="extend-text">
-                            {{ descs[i] }}
 
-                        </p>
-                        <div class="block">
-                            <div class="album">
-                                <div class="artwork">
-                                   
-                                    <ul class="bars">
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <iframe src={{links[i]}} height="100%" width="100%" frameborder="0" scrolling="no"></iframe>
-                    </div>
-            {% endfor %}
+
+
 
         </div>
     </section>
@@ -177,7 +155,7 @@
                             Facebook
                         </p>
                     </a>
-    
+
 
                 </div>
             </span>
@@ -191,7 +169,7 @@
                 </a>
                 <a href="https://medium.com/gdg-vit">
                     <p>Medium</p>
-                </a>  
+                </a>
             </span>
             <span class="links">
                 <h2>Links</h2>
@@ -216,15 +194,15 @@
             </span>
         </div>
     </section>
-   
+
 
 
     <!--Scripts-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="../static/assets/js/index.js"></script>
-    <script src="../static/assets/js/animation.js"></script>
-    
+    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/animation.js"></script>
+
 </body>
 
 </html>
