Fix: css anim mobile responsive

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -577,6 +577,10 @@ p {
     .nav-super {
         position: fixed !important;
     }
+    .circle-container {
+        width: 200px;
+        height: 300px;
+    }
 
 }
 
@@ -591,8 +595,8 @@ p {
     }
 
     .circle-container {
-        width: 200px;
-        height: 200px;
+        width: 120px;
+        height: 120px;
     }
 
     .circle {
